specs/001-typescript-to-zig-native/examples/valid/function-decl.ts
function add(a: int, b: int): int {
  return a + b;
}

console.log(1);
