specs/001-typescript-to-zig-native/examples/invalid/function-return-type.ts
function bad(): int {
  return "nope";
}

console.log(1);
